Fix footer img scale on mobile Change max size of cover text element Create basic html template for navigations

--- a/src/scss/modules/cover.scss
+++ b/src/scss/modules/cover.scss
@@ -32,7 +32,7 @@
 }
 
 .header {
-    max-width: $desktop;
+    max-width: 80%;
     margin: auto;
 
     &__title {
