--- a/src/scss/modules/navigation.scss
+++ b/src/scss/modules/navigation.scss
@@ -1,15 +1,76 @@
 .navigation {
-    height: 3rem;
-    width: 100%;
-    background: $shadowDark;
-    color: $white;
+
+    background: $terminalBarBackgroundDark;
     position: fixed;
+    padding: .5rem 1.5rem;
+    width: 100%;
     z-index: 1;
 
-    &__logo {
-        font-size: 1.5rem;
-        padding: 0 100px;
-        line-height: 3rem;
-        font-weight: bold;
+    &__items{
+        display: flex;
+        margin: 0;
+        list-style-type: none;
+        justify-content: space-between;
+        align-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+
+        & li {
+            padding: 16px 5px;
+        }
+
+        @media screen and (max-width: $mobile){
+            
+        }
+
+        @media screen and (max-width: $tablet){
+            
+        }
     }
+
+    &__link {
+    }
+
+    &__logo{
+        font-size: 1.5rem;
+    }
+
+    &__text {
+        color: $white;
+        text-decoration: none;
+        display: block;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+
+    &__toggle {
+        cursor: pointer;
+        
+        &--bars {
+            background-color: $white;
+            width: 16px;
+            height: 2px;
+            display: block;
+            position: relative;
+
+            &::before, &::after {
+                content: '';
+                width: 16px;
+                height: 2px;
+                background-color: $white;
+                position: absolute;
+            }
+
+            &::before {
+                top: 5px;
+            }
+
+            &::after {
+                top: -5px;
+            }
+        }
+    }
+
 }
